--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kkklll888",
+  "name": "หวยรัฐบาลออนไลน์ สมัคร แทงหวย ซื้อหวยรัฐบาล ผ่าน เว็บเศรษฐี การันตีราคาจ่ายสูงสุดบาทละ 950",
   "theme": "syntax",
   "version": "1.0.12",
   "description": "หวยรัฐบาลออนไลน์ สมัคร แทงหวย ซื้อหวยรัฐบาล ผ่าน เว็บเศรษฐี การันตีราคาจ่ายสูงสุดบาทละ 950 พร้อมด้วยกิจกรรมและโปรโมชั่นแบบจัดเต็ม ตอบโจทย์ทุกความต้องการของเหล่าคอหวยชาวไทย พร้อมให้บริการแล้ววันนี้ 24 ชั่วโมง",
